2007-03-08 00:00  troubled

	* files/sample/blootbot.config: set tempDir changed to /tmp and
	  changed pgsql to SUPPORTED!
	* src/dbi.pl: Fixed SQL comments (--) bug that prevented tables
	  from being created during startup.
	* src/Modules/Factoids.pl: Typo for "factstats locked in selColHash
	  was preventing it from finding the func. Also addressed a !WARN!
	  issue about sorting a scalar.
	* src/dbi.pl: Altered checkTables() to pass $dbtype when creating
	  tables. Table sql now called from setup/<$dbtype>/$table.sql
	* src/Modules/Topic.pl: Fixed topicAuthor when no topic existed
	  and cleaned up original if statement to remove redundancy
	* Reorganized the setup/ dir. Put schema SQL for each db type
	  into its own dir to allow customization. See the README file
	* src/dbi.pl: Simplified the pgsql "SHOW TABLES" SQL

2007-03-07 14:06  troubled

	* setup/pgsql/: Added pgsql specific dir. To be completed later
	* setup/pgsql/pgsql-schema.sql: Import this file into an precreated
	  database as per blootbot.config and pgsql should be good to go
	* INSTALL.pgsql: Changes to reflect semi-function pgsql progress

2007-03-06 00:00  troubled

	* src/Process.pl: sqlReplace switched to sqlSet to fix pgsql.
	  sqlReplace should be removed since its not pg friendly. 
	  There is no matching REPLACE INTO in pgsql.
	* src/Factoids/DBCommon.pl: &setFactInfo during ~unlock set
	  time to NULL which Pgsql wants "0" since NOT NULL
	* src/Factoids/Update.pl: see Process.pl change
	* src/Misc.pl: see Process.pl change
	* src/dbi.pl: Added working PostgreSQL support! yay! ;)
	* src/Modules/botmail.pl: &sqlReplace -> &sqlSet; removed 
	  &sqlQuote (data already quoted and broke 1 msg only)
	* src/IRC/IrcHooks.pl: see Process.pl change
	* src/IRC/Schedulers.pl: see Process.pl change

2005-02-18 00:00  timriker

	* CMD: is now cmd:

2005-02-18 00:00  timriker

	* src/Factoids/Question.pl: minVolunteerLength now per channel
	* src/core.pl: getChanConf checks _default too